--- a/Exercícios/10projeto/style/style.css
+++ b/Exercícios/10projeto/style/style.css
@@ -1,5 +1,69 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+@font-face {
+    font-family: 'android';
+    src: url('../fontes/idroid.otf') format(opentype); 
+    font-weight: normal;
+}
+:root {
+    --color1: #65EBD6;
+    --color2: #83E1AD;
+    --color3: #3DDC84;
+    --color4: #2FA866;
+    --color5: #063D1E;
+
+    --font01: Arial, Verdana, Helvetica, sans-serif;
+    --font02: 'Bebas Neue', cursive;
+    --font03: 'android', cursive;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
-    background-color: #3ddc84;
+    background-color: var(--color1);
+    font-family: var(--font01);
+}
+
+header {
+    background-color: var(--color5);
+}
+
+header > h1 {
+    color: white;
+    font-family: var(--font02);
+
+}
+
+header > p {
+    color: white;
+}
+
+nav {
+    background-color: var(--color5);
+}
+
+main {
+    background-color: white;
+}
+main,h1 {
+    color: var(--color5);
+    font-family: var(--font03);
+}
+
+main,h2 {
+    font-family: var(--font03);
+}
+
+p {
+    font-family: var(--font01);
+}
+
+footer {
+    background-color: var(--color5);
+    color: white;
 }
