--- a/Exercícios/10projeto/style/style.css
+++ b/Exercícios/10projeto/style/style.css
@@ -8,7 +8,7 @@
     font-weight: normal;
 }
 :root {
-    --color1: #65EBD6;
+    --color1: #accdc8;
     --color2: #83E1AD;
     --color3: #3DDC84;
     --color4: #2FA866;
