--- a/Testes/kali/style.css
+++ b/Testes/kali/style.css
@@ -1,24 +1,95 @@
 @charset "UTF-8";
 
-
+* {
+    margin: 0px;
+    padding: 0px;
+}
 body {
-    background-color: rgb(54, 148, 216);
+    background-color: rgb(100, 180, 116);
+       
+}
+
+nav {
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+}
+
+nav>a {
+    color: rgb(140, 24, 24);
+
+    text-decoration: none;
+    text-align: center;
+    padding: 8px;
+    margin: 2px;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    font-weight: bolder;
+
+}
+
+nav {
+    background-color: rgb(100, 180, 116);
+}
+nav>a:hover {
+    color: rgb(255, 255, 255);
+    background-color: black;
+}
+
+article {
+    background-color: rgb(252, 252, 252);
+    padding: auto;
+}
+
+
+
+header {
+    background-image: linear-gradient(to bottom,black, rgb(75, 132, 84));
+    /*min-height: 150px;
+    padding-left:150px;*/
+
+    min-height: 3em;
+    padding-top: 40px; 
     text-align: justify;
-    text-indent: 30px;
+
     
 }
 
-p {
-    font-size: 15px;
-    font-family: Arial, sans-serif;
-    font-weight: 7123px;
-}
-
 header, ul {
-    background-color: rgb(177, 177, 177);
-    max-width: 1040px;
+    background-color: rgba(0, 255, 132, 0.432);
+    max-width: 1538px;
     min-width: 300px;
     margin: auto;
+}
+header > h1 {
+    color: rgb(255, 255, 255);
+    margin-bottom: 30px;
+    /*margin-left: 100px;*/
+    /*padding-left: 103px;*/
+    font-size: 3em;
+    text-shadow: black 2px 2px;
+    text-align: center;
+    padding-left: auto;
+    padding-right: 6px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+header > p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    text-shadow: 50px 30px 50px black;
+    text-align: center;
+    padding-left: auto;
+    padding-right: 6px;
+    padding-bottom: 30px;
+    margin: auto;
+    color: white;
+    max-width:530px;
+
+}
+
+article>h3,p {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 main {
@@ -33,16 +104,12 @@ main {
     border-bottom-right-radius: 10px;
 }
 
-nav {
-    background-color: rgb(255, 255, 255);
-    text-align: center;
+p {
+    font-size: 15px;
+    font-family: Arial, sans-serif;
+    font-weight: 7123px;
 }
 
-article {
-    background-color: rgb(252, 252, 252);
-    padding: auto;
-
-}
 
 div.video {
     background-color: rgb(0, 0, 0);
@@ -58,6 +125,18 @@ div.video>iframe {
     left: 5%;
     width: 90%;
     height: 90%;
+}
+
+aside>ul {
+
+    list-style-position: inside;
+    text-align: start;
+    padding-left: 150px;
+}
+
+footer>p {
+    text-align: center;
+    
 }
 
 
