--- a/Testes/kali 2.0/style.css
+++ b/Testes/kali 2.0/style.css
@@ -1,21 +1,65 @@
 @charset "utf-8";
 
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
 main {
-    background-color: aquamarine;
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    margin: 10px;
+    max-width: 10px;
+    min-width: 300px;
+    padding: 90px 0px 90px 0px;
+    margin: auto;
+    margin-bottom: 20px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 
 
 header {
 background-color: brown;
+max-width: 1550px;
+min-height: 300px;
 }
 
-nav {
+header>h1 {
+    color: aquamarine;
+    margin-bottom: 30px;
+    font-size: 3em;
+    font-family: 'Courier New', Courier, monospace;
+    text-shadow: 130px;
+    text-align: center;
+    padding-left: auto;
+    padding-right: 6px;
+}
+
+header>p {
+    color: white;
+    text-align: center;
+    text-indent: 30px;
+    font-size:20px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin:auto;
+    padding-left:auto;
+    padding-right:30px;
+    padding-bottom: 20px;
+    max-width: 530px;
+}
+
+header>nav {
     background-color: blue;
 }
 
 article {
     background-color: green;
+    padding-top:0px;
+    padding-bottom:0px;
+    padding-left:0px;
+    padding-right:0px;
 }
 
 article>aside {
