--- a/Exercícios/12cordel/estilo/style.css
+++ b/Exercícios/12cordel/estilo/style.css
@@ -1,2 +1,76 @@
 @charset "utf-8";
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+htmml, body {
+    min-height: 100vh;
+    background-color: darkgrey;
+
+    /*No min-height pode ser 100% ou 100vh*/
+
+}
+
+header {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+
+    /*Padding-top dá um espacinho na parte de cima do "Cordel Moderno".*/
+
+    /*O "text-transform:uppercase;" pode deixar a fonte muito pequena ou muito grande.*/
+
+    /*A "font-variant" reduz o tamanho da fonte mais delicadamente, além de manter as letras maiúsculas.*/
+}
+
+header > p {
+    padding-bottom: 50px;
+    /*NÃO FUNCIONOU!*/
+}
+
+a:hover {
+    color: rgb(24, 186, 113);
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+
+}
+
+section.normal {
+    background-color: white;
+    color: black;
+}
+
+section.imagem {
+    background-color: rgb(84, 84, 84);
+    color: white;
+}
+
+section.imagem > p {
+    width: 400px;
+    background-color: black;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
