--- a/Modulo 04/projeto-social/estilo/style.css
+++ b/Modulo 04/projeto-social/estilo/style.css
@@ -96,6 +96,8 @@ section#redes-sociais img:hover{
     border: rgba(255, 255, 255, 0.6) solid 2px;
     transform: translate(-5px, -5px);
     box-shadow: 10px 10px 5px black;
-    transition: transform 2s, border white 5s;
+    transition: transform 4s, border white 5s;
+
+    /*transition: transform - aqui, o tempo dos efeitos podem ser alterados.*/
 }
 
